@@ -1,4 +1,8 @@
-﻿zg 13.04.2015 13:27:28 +0200 - build 4348
+﻿drkns 13.04.2015 14:09:29 +0200 - build 4349
+
+1. В истории могли дублироваться элементы (баг в sqlite_unicode.c)
+
+zg 13.04.2015 13:27:28 +0200 - build 4348
 
 1. уточнение 4337: ralt не включает фильтр в меню.
 
